Upgrade search forms
Problem with query bug fix

--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -8,7 +8,7 @@
                      {% for flashSuccess in app.flashes('success') %}
                        <div class="alert alert-success" role="alert">{{ flashSuccess }}</div>
                      {% endfor %}
-                     <img class="welcomeImg" src="{{ asset('assets/images/work.png') }}" alt="">
+                     <img class="welcomeImg" src="{{ asset('assets/images/get4net190203516.jpg') }}" alt="">
                  </div>
              </div>
          </div>
@@ -20,9 +20,10 @@
              <div class="row">
                  <div class="col-lg-12">
                      <div class="section-heading">
-                         <p>Bienvenue sur Debug Gaming! Ce site a pour vocations de répertorier différents bugs dans les jeux vidéos, et d'indiquer
+                         <p>Bienvenue sur Debug Gaming! Ce site a pour vocation de répertorier différents bugs dans les jeux vidéos, et d'indiquer
                          quand il existe une ou plusieurs solutions, d'expliquer ces dernières, ainsi que d'éventuelles corrections suite à des patchs des développeurs.
-                         Chacun peut contribuer en ajouter un bug expérimenté, on compte donc sur vous pour savoir à quoi s'attendre face aux bugs, voire à les résoudre !</p>
+                         Chacun peut contribuer en ajoutant un ou plusieurs bugs que vous avez expérimenté, ainsi que leurs solutions si vous en connaissez une.
+                         On compte donc sur vous pour savoir à quoi s'attendre face aux bugs, voire à les résoudre !</p>
                      </div>
                  </div>
              </div>
