--- a/public/assets/css/templatemo-plot-listing.css
+++ b/public/assets/css/templatemo-plot-listing.css
@@ -985,6 +985,30 @@ form#search-form input.searchText {
     padding: 0px 30px;
 }
 
+.row .nav-links .page-numbers {
+    border: 1px solid #8d99af;
+    border-radius: 50%;
+    color: #000;
+    display: inline-block;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    height: 45px;
+    line-height: 45px;
+    list-style: outside none none;
+    margin-right: 5px;
+    text-align: center;
+    width: 45px;
+}
+
+.row .nav-links .page-numbers:hover {
+    border: 1px solid #2a2a2a;
+}
+
+.row .nav-links a .current {
+    border: 3px solid #8d99af;
+}
+
 form#search-form input::placeholder {
     color: #2a2a2a;
     font-size: 15px;
