--- a/templates/pages/bugPage.html.twig
+++ b/templates/pages/bugPage.html.twig
@@ -125,6 +125,7 @@
          {% for bugSolution in bugSolutions %}
           <div class="col-lg-4"></div>
           <div class="col-lg-4">
+            <h3>{{ bugSolution.titleBugSolution }}</h3>
             <img src="{{ asset('assets/images/' ~bugSolution.imgBugSolution) }}" alt="">
           </div>
           <div class="col-lg-4"></div>
